# NAV2Bench

./: CMakeLists.txt  README.md  package.xml
config/: amcl_localization.yaml  navigation.yaml  petra_robot.yaml  test.yaml
config/behavior_trees/: pose.xml
launch/: all.launch.py  navigation.launch.py  petra_urdf_v7.launch.py  world.launch.py
models/nomeer_robot/: robot.sdf
rviz/: navigation.rviz  petra_robot_v1.rviz
scripts/: follow_path.py  marker_publisher.py  pdf_generator.py  performace_analysis.py  reset_robot.py  trajectory_generator.py
urdf/: petra_robot_v2.urdf  petra_robot_v2.urdf.bkp
worlds/: default.sdf.bkp  empty.sdf  home.sdf
